[package]
name = "solana-sbf-rust-abi-v2-memory"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
dummy-for-ci-check = ["solana-transaction-context/dummy-for-ci-check"]

[dependencies]
solana-pubkey = { workspace = true }
solana-transaction-context = { workspace = true, features = ["agave-unstable-api"] }
