[package]
name = "solana-sbf-rust-abi-v2-memory"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
dummy-for-ci-check = ["solana-transaction-context/dummy-for-ci-check"]

[dependencies]
bincode = { workspace = true }
solana-clock = { workspace = true }
solana-epoch-rewards = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-last-restart-slot = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true, features = ["sysvar"] }
solana-slot-hashes = { workspace = true }
solana-stake-interface = { workspace = true }
solana-transaction-context = { workspace = true, features = ["agave-unstable-api"] }
